@@ -1,3 +1,4 @@
+DROP TABLE IF EXISTS Products;
 DROP TABLE IF EXISTS SalariedEmployees;
 DROP TABLE IF EXISTS Employees;
 DROP TABLE IF EXISTS EmployeeChildren;
@@ -192,3 +193,8 @@ INSERT INTO DataTypeTests VALUES (@guid, @guid, @guid);
 INSERT INTO DataTypeTests VALUES ('481A6506-03A3-4ef9-A05A-B247E75A2FB4',
 	'481A6506-03A3-4ef9-A05A-B247E75A2FB4', '481A6506-03A3-4ef9-A05A-B247E75A2FB4');
 
+CREATE  TABLE Products (
+  Id INT NOT NULL AUTO_INCREMENT,
+  Name VARCHAR(45) NOT NULL,
+  CreatedDate TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
+  PRIMARY KEY (Id));
