@@ -1,7 +1,7 @@
 ﻿//------------------------------------------------------------------------------
 // <auto-generated>
 //     This code was generated by a tool.
-//     Runtime Version:2.0.50727.5444
+//     Runtime Version:2.0.50727.5446
 //
 //     Changes to this file may cause incorrect behavior and will be lost if
 //     the code is regenerated.
@@ -15,7 +15,7 @@
 [assembly: global::System.Data.Objects.DataClasses.EdmRelationshipAttribute("testModel", "FK_Books_Publishers", "Publishers", global::System.Data.Metadata.Edm.RelationshipMultiplicity.One, typeof(MySql.Data.Entity.Tests.Publisher), "Books", global::System.Data.Metadata.Edm.RelationshipMultiplicity.Many, typeof(MySql.Data.Entity.Tests.Book))]
 
 // Original file name:
-// Generation date: 5/26/2011 9:15:03 AM
+// Generation date: 6/22/2011 3:55:21 PM
 namespace MySql.Data.Entity.Tests
 {
     
@@ -215,6 +215,21 @@ namespace MySql.Data.Entity.Tests
         }
         private global::System.Data.Objects.ObjectQuery<Computer> _Computers;
         /// <summary>
+        /// There are no comments for Products in the schema.
+        /// </summary>
+        public global::System.Data.Objects.ObjectQuery<Product> Products
+        {
+            get
+            {
+                if ((this._Products == null))
+                {
+                    this._Products = base.CreateQuery<Product>("[Products]");
+                }
+                return this._Products;
+            }
+        }
+        private global::System.Data.Objects.ObjectQuery<Product> _Products;
+        /// <summary>
         /// There are no comments for Employees in the schema.
         /// </summary>
         public void AddToEmployees(Employee employee)
@@ -290,6 +305,13 @@ namespace MySql.Data.Entity.Tests
         public void AddToComputers(Computer computer)
         {
             base.AddObject("Computers", computer);
+        }
+        /// <summary>
+        /// There are no comments for Products in the schema.
+        /// </summary>
+        public void AddToProducts(Product product)
+        {
+            base.AddObject("Products", product);
         }
     }
     /// <summary>
@@ -481,7 +503,7 @@ namespace MySql.Data.Entity.Tests
         /// <param name="lastName">Initial value of LastName.</param>
         /// <param name="firstName">Initial value of FirstName.</param>
         /// <param name="modified">Initial value of Modified.</param>
-        public static Child CreateChild(long id, int employeeID, string lastName, string firstName, global::System.DateTimeOffset modified)
+        public static Child CreateChild(long id, int employeeID, string lastName, string firstName, global::System.DateTime modified)
         {
             Child child = new Child();
             child.Id = id;
@@ -634,7 +656,7 @@ namespace MySql.Data.Entity.Tests
         /// </summary>
         [global::System.Data.Objects.DataClasses.EdmScalarPropertyAttribute(IsNullable=false)]
         [global::System.Runtime.Serialization.DataMemberAttribute()]
-        public global::System.DateTimeOffset Modified
+        public global::System.DateTime Modified
         {
             get
             {
@@ -649,8 +671,8 @@ namespace MySql.Data.Entity.Tests
                 this.OnModifiedChanged();
             }
         }
-        private global::System.DateTimeOffset _Modified;
-        partial void OnModifiedChanging(global::System.DateTimeOffset value);
+        private global::System.DateTime _Modified;
+        partial void OnModifiedChanging(global::System.DateTime value);
         partial void OnModifiedChanged();
     }
     /// <summary>
@@ -2038,5 +2060,100 @@ namespace MySql.Data.Entity.Tests
         private global::System.Nullable<global::System.DateTime> _ReleaseDate;
         partial void OnReleaseDateChanging(global::System.Nullable<global::System.DateTime> value);
         partial void OnReleaseDateChanged();
+    }
+    /// <summary>
+    /// There are no comments for testModel.Product in the schema.
+    /// </summary>
+    /// <KeyProperties>
+    /// Id
+    /// </KeyProperties>
+    [global::System.Data.Objects.DataClasses.EdmEntityTypeAttribute(NamespaceName="testModel", Name="Product")]
+    [global::System.Runtime.Serialization.DataContractAttribute(IsReference=true)]
+    [global::System.Serializable()]
+    public partial class Product : global::System.Data.Objects.DataClasses.EntityObject
+    {
+        /// <summary>
+        /// Create a new Product object.
+        /// </summary>
+        /// <param name="id">Initial value of Id.</param>
+        /// <param name="name">Initial value of Name.</param>
+        /// <param name="createdDate">Initial value of CreatedDate.</param>
+        public static Product CreateProduct(int id, string name, global::System.DateTime createdDate)
+        {
+            Product product = new Product();
+            product.Id = id;
+            product.Name = name;
+            product.CreatedDate = createdDate;
+            return product;
+        }
+        /// <summary>
+        /// There are no comments for Property Id in the schema.
+        /// </summary>
+        [global::System.Data.Objects.DataClasses.EdmScalarPropertyAttribute(EntityKeyProperty=true, IsNullable=false)]
+        [global::System.Runtime.Serialization.DataMemberAttribute()]
+        public int Id
+        {
+            get
+            {
+                return this._Id;
+            }
+            set
+            {
+                this.OnIdChanging(value);
+                this.ReportPropertyChanging("Id");
+                this._Id = global::System.Data.Objects.DataClasses.StructuralObject.SetValidValue(value);
+                this.ReportPropertyChanged("Id");
+                this.OnIdChanged();
+            }
+        }
+        private int _Id;
+        partial void OnIdChanging(int value);
+        partial void OnIdChanged();
+        /// <summary>
+        /// There are no comments for Property Name in the schema.
+        /// </summary>
+        [global::System.Data.Objects.DataClasses.EdmScalarPropertyAttribute(IsNullable=false)]
+        [global::System.Runtime.Serialization.DataMemberAttribute()]
+        public string Name
+        {
+            get
+            {
+                return this._Name;
+            }
+            set
+            {
+                this.OnNameChanging(value);
+                this.ReportPropertyChanging("Name");
+                this._Name = global::System.Data.Objects.DataClasses.StructuralObject.SetValidValue(value, false);
+                this.ReportPropertyChanged("Name");
+                this.OnNameChanged();
+            }
+        }
+        private string _Name;
+        partial void OnNameChanging(string value);
+        partial void OnNameChanged();
+        /// <summary>
+        /// There are no comments for Property CreatedDate in the schema.
+        /// </summary>
+        [global::System.Data.Objects.DataClasses.EdmScalarPropertyAttribute(IsNullable=false)]
+        [global::System.Runtime.Serialization.DataMemberAttribute()]
+        public global::System.DateTime CreatedDate
+        {
+            get
+            {
+                return this._CreatedDate;
+            }
+            set
+            {
+                this.OnCreatedDateChanging(value);
+                this.ReportPropertyChanging("CreatedDate");
+                this._CreatedDate = global::System.Data.Objects.DataClasses.StructuralObject.SetValidValue(value);
+                this.ReportPropertyChanged("CreatedDate");
+                this.OnCreatedDateChanged();
+            }
+        }
+        private global::System.DateTime _CreatedDate;
+        partial void OnCreatedDateChanging(global::System.DateTime value);
+        partial void OnCreatedDateChanged();
     }
 }
